@startuml

title __NAVIGATION_WITH_PASSWORD's Class Diagram__\n

  namespace com.example.navigation_with_password {
    class com.example.navigation_with_password.LoginActivity {
        - keyArray : String[]
        - keyGrid : GridView
        - password : String
        - passwordState : LinearLayout
        {static} - truePassword : String
        # onCreate()
        - bindEvent()
        - initData()
        - initView()
        - refreshPasswordState()
    }
  }
  

  namespace com.example.navigation_with_password {
    class com.example.navigation_with_password.NavigationActivity {
        - appLink : HashMap<String, String>
        - appList : ArrayList<Map<String, Object>>
        - appListGrid : GridView
        + bitmap2Bytes()
        {static} + drawableToBitmap()
        # onCreate()
        - bindData()
        - bindEvent()
        - checkPackInfo()
        - getPackages()
        - initData()
        - initView()
    }
  }
  

  namespace com.example.navigation_with_password {
    class com.example.navigation_with_password.WebViewActivity {
        - linkText : EditText
        - openLink : Button
        - webView : WebView
        + onBackPressed()
        # onCreate()
        - bindEvent()
        - initView()
    }
  }
  

  com.example.navigation_with_password.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.navigation_with_password.NavigationActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.navigation_with_password.WebViewActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
